2004-11-13  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in:
	* src/Makefile.am:
	* src/procman.h:
	* src/proctable.c: (can_show_security_context_column),
	(get_selinux_context), (proctable_new), (proctable_free_info),
	(insert_info_to_tree), (update_info), (get_info):
	* src/proctable.h: Merged David Malcolm  <david@davemalcolm.demon.co.uk>
	SELinux Security Context patch. Thanks :)
	New configure option: --enable-selinux

2004-11-13  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in: Bumped version.

2004-11-12  Benoît Dejean  <tazforever@dlfp.org>

	* src/util.c: (get_size_string):
	* src/util.h: Removed and replace by gnome_vfs_file_size...
	* src/callbacks.c: (compare_disks), (add_new_disks):
	* src/infoview.c: (infoview_update):
	* src/load-graph.c: (get_memory):
	* src/memmaps.c: (add_new_maps):
	
	* src/proctable.c: (insert_info_to_tree), (update_info):
	
	* src/procman.h: More guint64. libgtop uses a lot of guint64, so don't
	truncate to int. This should solve overflows on systems with >= 2GB of
	physical memory.
	
	* src/load-graph.c: (get_memory): Fixed mem%. Is used physical memory %,
	including cached + buffer.

2004-10-29  Benoît Dejean  <tazforever@dlfp.org>

	* * s/(MEM|CPU)_GRAPH/LOAD_GRAPH_$1/g

	* src/load-graph.c: (get_load), (load_graph_update),
	(load_graph_alloc), (load_graph_new): Replace a bunch of = with memcpy.
	Tuned loops.
	
	* src/procman.h: cpu_time, cpu_last, cpu_time_last are guint64.
	cpu -> guint8 pcpu
	
	* src/proctable.c: (sort_ints), (insert_info_to_tree),
	(update_info), (get_info): Updated.
	
	libgtop struct have a lot of guint64 members. currently they are boxed
	into gint which is obviously bad. More work has to be done to fix all of
	this.
	
	* src/proctable.h: Stronger #ifdef.

2004-10-28  Benoît Dejean  <tazforever@dlfp.org>

	* src/memmaps.c: (vmoff_tostring): Renamed vmoff_strdup_printf.
	
	* src/memmaps.h: Moved some declarations to memmaps.c.