@@ -24,7 +24,6 @@
 enum
 {
 	COL_NAME = 0,
-	COL_ARGS,
 	COL_USER,
 	COL_STATUS,
 	COL_MEM,
@@ -32,11 +31,12 @@ enum
 	COL_MEMRES,
 	COL_MEMSHARED,
 	COL_MEMRSS,
-        COL_MEMXSERVER,
+	COL_MEMXSERVER,
 	COL_CPU,
 	COL_NICE,
 	COL_PID,
 	COL_SECURITYCONTEXT,
+	COL_ARGS,
 	COL_PIXBUF,
 	COL_POINTER,
 	NUM_COLUMNS
