@@ -1,3 +1,10 @@
+2004-11-20  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/proctable.c: (proctable_new):
+	* src/proctable.h: Re-ordered columns so that 'Arguments' is the last.
+	This is a little workaround as long as columns are not re-orderable.
+	See #125857.
+
 2004-11-13  Benoît Dejean  <tazforever@dlfp.org>
 
 	* configure.in:
